--- a/wp-content/themes/hydratest/assets/theme.css
+++ b/wp-content/themes/hydratest/assets/theme.css
@@ -24,3 +24,8 @@
         flex-basis: 50%;
     }
 }
+
+.img-shape-about img {
+    border-radius: 240px 100px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
