--- a/wp-content/themes/hydratest/assets/theme.css
+++ b/wp-content/themes/hydratest/assets/theme.css
@@ -26,6 +26,17 @@
 }
 
 .img-shape-about img {
-    border-radius: 240px 100px;
+    border-radius: 43% 21%;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+@media only screen and (max-width: 480px) {
+    .button-100 > div {
+        width: 100% !important;
+    }
+}
+@media only screen and (min-width: 782px) and (max-width: 992px) {
+    .button-100 > div {
+        width: 100% !important;
+    }
 }
