--- a/wp-content/themes/hydratest/assets/theme.css
+++ b/wp-content/themes/hydratest/assets/theme.css
@@ -25,9 +25,15 @@
     }
 }
 
-.img-shape-about img {
-    border-radius: 43% 21%;
+.box-shadow img {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+h1 span {
+    background: linear-gradient(269deg, #C0B7E8 -3.72%, #8176AF 82.17%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;  
 }
 
 @media only screen and (max-width: 480px) {
