--- a/wp-content/themes/hydratest/assets/theme.css
+++ b/wp-content/themes/hydratest/assets/theme.css
@@ -20,10 +20,25 @@
     .lg-visible {
         display: flex !important;
     }
-    .lg-w-50 {
-        flex-basis: 50%;
+}
+
+@media only screen and (min-width: 600px) {
+    .sm-w-30 {
+        flex-basis: 30% !important;
+    }
+    .sm-w-70 {
+        flex-basis: 70% !important;
     }
 }
+@media only screen and (min-width: 992px) {
+    .lg-w-20 {
+        flex-basis: 20% !important;
+    }
+    .lg-w-50 {
+        flex-basis: 50% !important;
+    }
+}
+
 
 .box-shadow img {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -51,7 +66,7 @@ h1 span {
     object-fit: fill;
 }
 
-.wp-block-cover__image-background.wp-image-212 {
+.section-hero .wp-block-cover__image-background {
     left: -42%;
     object-fit: none;
 }
